[project]
name = "Test-streamlit"
version = "0.1.0"
description = ""
authors = [
    {name = "Aurele Gnanha",email = "aurele.gnanha@gmail.com"}
]
readme = "README.md"
package-mode = false 

requires-python = ">=3.11,<3.13"
dependencies = [
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.13.3)",
    "aiosignal (==1.4.0)",
    "alembic (==1.18.1)",
    "altair (==6.0.0)",
    "annotated-doc (==0.0.4)",
    "annotated-types (==0.7.0)",
    "anyio (==4.12.1)",
    "appdirs (==1.4.4)",
    "asgiref (==3.11.0)",
    "asttokens (==3.0.1)",
    "async-generator (==1.10)",
    "attrs (==25.4.0)",
    "auth0-python (==4.13.0)",
    "backoff (==2.2.1)",
    "bcrypt (==5.0.0)",
    "beautifulsoup4 (==4.14.3)",
    "blinker (==1.9.0)",
    "build (==1.4.0)",
    "cachecontrol (==0.14.4)",
    "cachetools (==6.2.4)",
    "certifi (==2026.1.4)",
    "cffi (==2.0.0)",
    "charset-normalizer (==3.4.4)",
    "chroma-hnswlib (==0.7.3)",
    "chromadb (==0.4.24)",
    "cleo (==2.1.0)",
    "click (==8.3.1)",
    "cohere (==5.20.1)",
    "coloredlogs (==15.0.1)",
    "contourpy (==1.3.3)",
    "crashtest (==0.4.1)",
    "crewai (==0.67.1)",
    "crewai-tools (==0.12.1)",
    "cryptography (==46.0.3)",
    "cycler (==0.12.1)",
    "dataclasses-json (==0.6.7)",
    "decorator (==5.2.1)",
    "deprecation (==2.1.0)",
    "distlib (==0.4.0)",
    "distro (==1.9.0)",
    "docker (==7.1.0)",
    "docstring-parser (==0.16)",
    "docx2txt (==0.8)",
    "dulwich (==0.21.7)",
    "durationpy (==0.10)",
    "embedchain (==0.1.122)",
    "executing (==2.2.1)",
    "fastapi (==0.128.0)",
    "fastavro (==1.12.1)",
    "fastjsonschema (==2.21.2)",
    "fastuuid (==0.14.0)",
    "filelock (==3.20.3)",
    "flatbuffers (==25.12.19)",
    "fonttools (==4.61.1)",
    "frozenlist (==1.8.0)",
    "fsspec (==2026.1.0)",
    "gitdb (==4.0.12)",
    "gitpython (==3.1.46)",
    "google-api-core (==2.29.0)",
    "google-auth (==2.47.0)",
    "google-cloud-aiplatform (==1.134.0)",
    "google-cloud-bigquery (==3.40.0)",
    "google-cloud-core (==2.5.0)",
    "google-cloud-resource-manager (==1.16.0)",
    "google-cloud-storage (==3.8.0)",
    "google-crc32c (==1.8.0)",
    "google-genai (==1.59.0)",
    "google-resumable-media (==2.8.0)",
    "googleapis-common-protos (==1.72.0)",
    "gptcache (==0.1.44)",
    "greenlet (==3.3.0)",
    "grpc-google-iam-v1 (==0.14.3)",
    "grpcio (==1.76.0)",
    "grpcio-status (==1.76.0)",
    "h11 (==0.16.0)",
    "h2 (==4.3.0)",
    "hf-xet (==1.2.0)",
    "hpack (==4.1.0)",
    "httpcore (==1.0.9)",
    "httptools (==0.7.1)",
    "httpx (==0.28.1)",
    "huggingface-hub (==1.3.2)",
    "humanfriendly (==10.0)",
    "hyperframe (==6.1.0)",
    "idna (==3.11)",
    "importlib-metadata (==8.7.1)",
    "importlib-resources (==6.5.2)",
    "iniconfig (==2.3.0)",
    "installer (==0.7.0)",
    "instructor (==1.3.3)",
    "ipython (==9.9.0)",
    "ipython-pygments-lexers (==1.1.1)",
    "jaraco-classes (==3.4.0)",
    "jedi (==0.19.2)",
    "jinja2 (==3.1.6)",
    "jiter (==0.4.2)",
    "json-repair (==0.25.3)",
    "jsonpatch (==1.33)",
    "jsonpickle (==4.1.1)",
    "jsonpointer (==3.0.0)",
    "jsonref (==1.1.0)",
    "jsonschema (==4.26.0)",
    "jsonschema-specifications (==2025.9.1)",
    "keyring (==24.3.1)",
    "kiwisolver (==1.4.9)",
    "kubernetes (==35.0.0)",
    "lancedb (==0.5.7)",
    "langchain (==0.2.17)",
    "langchain-cohere (==0.1.9)",
    "langchain-community (==0.2.19)",
    "langchain-core (==0.2.43)",
    "langchain-experimental (==0.0.65)",
    "langchain-openai (==0.1.25)",
    "langchain-text-splitters (==0.2.4)",
    "langsmith (==0.1.147)",
    "litellm (==1.80.0)",
    "mako (==1.3.10)",
    "markdown-it-py (==4.0.0)",
    "markupsafe (==3.0.3)",
    "marshmallow (==3.26.2)",
    "matplotlib (==3.9.2)",
    "matplotlib-inline (==0.2.1)",
    "mdurl (==0.1.2)",
    "mem0ai (==0.1.115)",
    "mmh3 (==5.2.0)",
    "monotonic (==1.6)",
    "more-itertools (==10.8.0)",
    "mpmath (==1.3.0)",
    "msgpack (==1.1.2)",
    "multidict (==6.7.0)",
    "mypy-extensions (==1.1.0)",
    "narwhals (==2.15.0)",
    "networkx (==3.6.1)",
    "nodeenv (==1.10.0)",
    "numpy (==1.26.4)",
    "oauthlib (==3.3.1)",
    "onnxruntime (==1.23.2)",
    "openai (==1.109.1)",
    "opentelemetry-api (==1.39.1)",
    "opentelemetry-exporter-otlp-proto-common (==1.39.1)",
    "opentelemetry-exporter-otlp-proto-grpc (==1.39.1)",
    "opentelemetry-exporter-otlp-proto-http (==1.39.1)",
    "opentelemetry-instrumentation (==0.60b1)",
    "opentelemetry-instrumentation-asgi (==0.60b1)",
    "opentelemetry-instrumentation-fastapi (==0.60b1)",
    "opentelemetry-proto (==1.39.1)",
    "opentelemetry-sdk (==1.39.1)",
    "opentelemetry-semantic-conventions (==0.60b1)",
    "opentelemetry-util-http (==0.60b1)",
    "orjson (==3.11.5)",
    "outcome (==1.3.0.post0)",
    "overrides (==7.7.0)",
    "packaging (==24.2)",
    "pandas (==2.3.3)",
    "parso (==0.8.5)",
    "pexpect (==4.9.0)",
    "pillow (==12.1.0)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.5.1)",
    "pluggy (==1.6.0)",
    "poetry (==1.8.5)",
    "poetry-core (==1.9.1)",
    "poetry-plugin-export (==1.8.0)",
    "portalocker (==3.2.0)",
    "posthog (==3.25.0)",
    "prompt-toolkit (==3.0.52)",
    "propcache (==0.4.1)",
    "proto-plus (==1.27.0)",
    "protobuf (==6.33.4)",
    "ptyprocess (==0.7.0)",
    "pulsar-client (==3.9.0)",
    "pure-eval (==0.2.3)",
    "py (==1.11.0)",
    "pyarrow (==23.0.0)",
    "pyasn1 (==0.6.2)",
    "pyasn1-modules (==0.4.2)",
    "pycparser (==2.23)",
    "pydantic (==2.12.5)",
    "pydantic-core (==2.41.5)",
    "pydeck (==0.9.1)",
    "pygments (==2.19.2)",
    "pyjwt (==2.10.1)",
    "pylance (==0.9.18)",
    "pympler (==1.1)",
    "pyparsing (==3.3.2)",
    "pypdf (==4.3.1)",
    "pypika (==0.50.0)",
    "pyproject-hooks (==1.2.0)",
    "pyright (==1.1.408)",
    "pysbd (==0.3.4)",
    "pysocks (==1.7.1)",
    "pytest (==8.4.2)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.2.1)",
    "pytube (==15.0.0)",
    "pytz (==2025.2)",
    "pytz-deprecation-shim (==0.1.0.post0)",
    "pyvis (==0.3.2)",
    "pyyaml (==6.0.3)",
    "qdrant-client (==1.16.2)",
    "rapidfuzz (==3.14.3)",
    "ratelimiter (==1.2.0.post0)",
    "referencing (==0.37.0)",
    "regex (==2024.11.6)",
    "requests (==2.32.5)",
    "requests-oauthlib (==2.0.0)",
    "requests-toolbelt (==1.0.0)",
    "retry (==0.9.2)",
    "rich (==13.9.4)",
    "rpds-py (==0.30.0)",
    "rsa (==4.9.1)",
    "schema (==0.7.8)",
    "selenium (==4.40.0)",
    "semver (==3.0.4)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "smmap (==5.0.2)",
    "sniffio (==1.3.1)",
    "sortedcontainers (==2.4.0)",
    "soupsieve (==2.8.3)",
    "sqlalchemy (==2.0.45)",
    "stack-data (==0.6.3)",
    "starlette (==0.50.0)",
    "streamlit (==1.53.1)",
    "sympy (==1.14.0)",
    "tabulate (==0.9.0)",
    "tenacity (==8.5.0)",
    "tiktoken (==0.7.0)",
    "tokenizers (==0.22.2)",
    "toml (==0.10.2)",
    "tomlkit (==0.14.0)",
    "tornado (==6.5.4)",
    "tqdm (==4.67.1)",
    "traitlets (==5.14.3)",
    "trio (==0.32.0)",
    "trio-typing (==0.10.0)",
    "trio-websocket (==0.12.2)",
    "trove-classifiers (==2026.1.14.14)",
    "typer (==0.21.1)",
    "typer-slim (==0.21.1)",
    "types-certifi (==2021.10.8.3)",
    "types-requests (==2.32.4.20260107)",
    "types-urllib3 (==1.26.25.14)",
    "typing-inspect (==0.9.0)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "tzdata (==2025.3)",
    "tzlocal (==5.3.1)",
    "urllib3 (==2.6.3)",
    "uvicorn (==0.40.0)",
    "uvloop (==0.22.1)",
    "validators (==0.35.0)",
    "virtualenv (==20.36.1)",
    "watchfiles (==1.1.1)",
    "wcwidth (==0.2.14)",
    "websocket-client (==1.9.0)",
    "websockets (==15.0.1)",
    "wrapt (==1.17.3)",
    "wsproto (==1.3.2)",
    "xattr (==1.3.0)",
    "yarl (==1.22.0)",
    "zipp (==3.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
